--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
 
 
 @inproceedings{isrfgoel2023,
-    author    = {Goel*, Rahul and Sirikonda*, Dhawal and Saini, Saurabh and Narayanan, P. J.},
+    author    = {Goel\*, Rahul and Sirikonda\*, Dhawal and Saini, Saurabh and Narayanan, P. J.},
     abbr = {ISRF},
     title     = {Interactive Segmentation of Radiance Fields},
     booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
@@ -47,7 +47,7 @@
 }
 
 @inproceedings{goel2022styletrf,
-    author = {Goel, Rahul and Dhawal, Sirikonda and Saini, Saurabh and Narayanan, P.J.},
+    author = {Goel*, Rahul and Dhawal, Sirikonda* and Saini, Saurabh and Narayanan, P.J.},
     abbr={StyleTRF},
     title = {StyleTRF: Stylizing Tensorial Radiance Fields},
     year = {2022},
