--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,6 +6,21 @@
 # add teaser in the assets image and use arxiv number with _ instead of .
 
 
+@misc{https://doi.org/10.48550/arXiv.2411.18597,
+  doi = {10.48550/arXiv.2411.18597},
+  url = {https://arxiv.org/abs/2411.18597},
+  abbr={aosl},
+  author = {Dhawal, Sirikonda and Chakravarthula, Praneeth and Gkioulekas, Ioannis and Adithya, Pediredla},
+  keywords = {Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Structured light with a million light planes per second},
+  abstract = {We introduce a structured light system that captures full-frame depth at rates of a thousand frames per second, four times faster than the previous state of the art. Our key innovation to this end is the design of an acousto-optic light scanning device that can scan light planes at rates up to two million planes per second. We combine this device with an event camera for structured light, using the sparse events triggered on the camera as we sweep a light plane on the scene for depth triangulation. In contrast to prior work, where light scanning is the bottleneck towards faster structured light operation, our light scanning device is three orders of magnitude faster than the event camera's full-frame bandwidth, thus allowing us to take full advantage of the event camera's fast operation. To surpass this bandwidth, we additionally demonstrate adaptive scanning of only regions of interest, at speeds an order of magnitude faster than the theoretical full-frame limit for event cameras.},
+  publisher = {arXiv},
+  year = {2025},
+  conference = {Under Review},
+  website = {https://arxiv.org/abs/2411.18597},
+  selected={true}
+}
+
 @inproceedings{isrfgoel2023,
     author    = {Goel\*, Rahul and Sirikonda\*, Dhawal and Saini, Saurabh and Narayanan, P. J.},
     abbr = {ISRF},
